[metadata]
name = qoemu-pkg-hm
version = 0.5.0
author = Lars Wischhof, Jan Krahl
author_email = wischhof@ieee.org
description = Quality of Experience (QoE) emulation system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sam-dev.cs.hm.edu/qoemu/qoemu
project_urls =
    Bug Tracker = https://sam-dev.cs.hm.edu/qoemu/qoemu/-/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux Ubuntu

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    qoemu = qoemu_pkg.command_line:main
    qoemu-gui = qoemu_pkg.gui.gui:main